--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -1,10 +1,10 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Package Metadata (87% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="M&eacute;tadonn&eacute;es du package (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Metadane pakietu (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (87% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (17% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Metadane pakietu (87% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (36% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
 <p>Beginning in FreeCAD v0.20 addons should be distributed with a manifest file describing their contents. FreeCAD uses this metadata to determine what resources to load and what dependencies to install upon other things. The file also provides information used to display your addon in the Addon Manager.
@@ -362,33 +362,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260117215733
+Cached time: 20260121160048
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.092 seconds
-Real time usage: 0.144 seconds
-Preprocessor visited node count: 629/1000000
+CPU time usage: 0.089 seconds
+Real time usage: 0.117 seconds
+Preprocessor visited node count: 631/1000000
 Post&#8208;expand include size: 7063/2097152 bytes
 Template argument size: 2489/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8536/5000000 bytes
+Unstrip post&#8208;expand size: 8521/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.511      1 -total
- 44.66%   14.074      1 Template:Powerdocnavi
- 16.96%    5.345      1 Template:Navigation_menu_2
- 13.79%    4.344      1 Template:Code
- 10.87%    3.426      1 Template:TOCright
-  8.74%    2.754      3 Template:Version
-  7.57%    2.386     37 Template:Incode
-  4.40%    1.387      1 Template:MenuCommand
+100.00%   18.364      1 -total
+ 30.91%    5.677      1 Template:Powerdocnavi
+ 14.82%    2.721     37 Template:Incode
+ 13.53%    2.484      1 Template:TOCright
+ 11.52%    2.115      1 Template:Navigation_menu_2
+  8.89%    1.633      1 Template:Code
+  8.04%    1.476      3 Template:Version
+  6.67%    1.224      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260117215735 and revision id 1739688. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260121160048 and revision id 1741903. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
