--- a/wiki/File_Format_FCStd.html
+++ b/wiki/File_Format_FCStd.html
@@ -1,13 +1,13 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">File Format FCStd</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-File+Format+FCStd&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="id/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="id" dir="ltr">Bahasa Indonesia</a></li>
-<li><a href="de/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Dateiformat FCStd (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Dateiformat FCStd (92% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (96% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Fichier au format FCStd (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Formato dei file FCStd (100% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Format pliku FCStd (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="es/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="File Format FCStd (88% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
+<li><a href="fr/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Fichier au format FCStd (92% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato dei file FCStd (92% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Format pliku FCStd (92% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
-<li><a href="pt-br/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--complete" title="Formato do arquivo FCStd (100% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
+<li><a href="pt-br/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--high" title="Formato do arquivo FCStd (92% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ro/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="Formatul fi&#537;ierului FCStd (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="fi/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="cs/File_Format_FCStd.html" class="mw-pt-progress mw-pt-progress--low" title="File Format FCStd (4% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
@@ -170,35 +170,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120055400
+Cached time: 20260121160441
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.088 seconds
+CPU time usage: 0.082 seconds
+Real time usage: 0.098 seconds
 Preprocessor visited node count: 406/1000000
 Post&#8208;expand include size: 7683/2097152 bytes
 Template argument size: 5701/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 20688/5000000 bytes
+Unstrip post&#8208;expand size: 20663/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.492      1 -total
- 21.51%    2.687      1 Template:Userdocnavi
- 19.48%    2.434      2 Template:PropertyData
- 16.24%    2.029      2 Template:Code
- 13.57%    1.695      1 Template:Navigation_menu_2
- 11.54%    1.441      2 Template:Variable
- 10.21%    1.276     16 Template:FileName
-  7.92%    0.990      1 Template:TOCright
-  7.65%    0.956      2 Template:Incode
-  5.40%    0.674      1 Template:Clear
+100.00%   13.183      1 -total
+ 29.23%    3.853      1 Template:Userdocnavi
+ 19.88%    2.621      1 Template:Navigation_menu_2
+ 18.23%    2.403      2 Template:PropertyData
+ 11.33%    1.494      2 Template:Code
+ 10.92%    1.440      2 Template:Variable
+  8.70%    1.147     16 Template:FileName
+  8.00%    1.055      1 Template:Clear
+  7.25%    0.956      1 Template:TOCright
+  6.74%    0.889      2 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:581-0!canonical and timestamp 20260120055404 and revision id 1741513. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:581-0!canonical and timestamp 20260121160441 and revision id 1741513. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
