--- a/wiki/Workbench_creation.html
+++ b/wiki/Workbench_creation.html
@@ -373,7 +373,7 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
 <h2><span class="mw-headline" id="Related">Related</span></h2>
 <ul><li><a href="Translating_an_external_workbench.html" title="Translating an external workbench">Translating an external workbench</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Forum discussion: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -403,12 +403,12 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121160913
+Cached time: 20260121162217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.147 seconds
+CPU time usage: 0.121 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 537/1000000
 Post&#8208;expand include size: 9843/2097152 bytes
 Template argument size: 12796/2097152 bytes
@@ -419,19 +419,19 @@ Unstrip post&#8208;expand size: 32845/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.409      1 -total
- 20.45%    4.786     12 Template:Code
- 18.16%    4.250      1 Template:Powerdocnavi
- 11.04%    2.584      5 Template:FileName
-  8.99%    2.105      1 Template:Navigation_menu_2
-  8.00%    1.873      1 Template:VersionPlus
-  6.89%    1.614      2 Template:Docnav
-  6.64%    1.555     10 Template:Incode
-  6.60%    1.544      1 Template:VeryImportantMessage
-  5.20%    1.218      1 Template:VersionMinus
+100.00%   23.657      1 -total
+ 21.51%    5.088     12 Template:Code
+ 17.11%    4.048      1 Template:Powerdocnavi
+  9.68%    2.290      2 Template:Docnav
+  9.35%    2.211      1 Template:VeryImportantMessage
+  8.31%    1.965      1 Template:Navigation_menu_2
+  6.71%    1.588      1 Template:VersionMinus
+  5.82%    1.376     10 Template:Incode
+  4.97%    1.176      1 Template:MenuCommand
+  4.92%    1.164      5 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59352-0!canonical and timestamp 20260121160913 and revision id 1718667. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59352-0!canonical and timestamp 20260121162515 and revision id 1741946. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
