--- a/wiki/de/Workbench_creation.html
+++ b/wiki/de/Workbench_creation.html
@@ -7,6 +7,7 @@
 <li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1072; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; (85% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#24037;&#20316;&#21488;&#30340;&#21019;&#24314; (85% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -403,7 +404,7 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
 <h2><span class="mw-headline" id="Verwandtes">Verwandtes</span></h2>
 <ul><li><a href="../de/Translating_an_external_workbench.html" title="Translating an external workbench/de">&Uuml;bersetzen eines externen Arbeitsbereichs</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Forum discussion: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -433,35 +434,35 @@ Arbeitsbereichsdefinition selbst auch in C++ programmieren (obwohl es nicht notw
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251229122213
+Cached time: 20260121162556
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.091 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 472/1000000
 Post&#8208;expand include size: 10453/2097152 bytes
 Template argument size: 13108/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32657/5000000 bytes
+Unstrip post&#8208;expand size: 32829/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.291      1 -total
- 22.94%    7.867      1 Template:Powerdocnavi/de
- 16.53%    5.669     12 Template:Code
-  9.71%    3.328      1 Template:Navigation_menu_2
-  8.97%    3.076      1 Template:VersionMinus/de
-  7.94%    2.721      1 Template:VersionPlus/de
-  7.68%    2.632      5 Template:FileName
-  7.37%    2.526      2 Template:Docnav/de
-  5.75%    1.973      1 Template:MenuCommand
-  5.37%    1.842      9 Template:Incode
+100.00%   22.714      1 -total
+ 26.68%    6.061      1 Template:Powerdocnavi/de
+ 17.16%    3.898     12 Template:Code
+  9.52%    2.162      1 Template:Navigation_menu_2
+  8.43%    1.914      2 Template:Docnav/de
+  7.60%    1.726      1 Template:VersionPlus/de
+  6.29%    1.430      1 Template:VersionMinus/de
+  6.03%    1.370      9 Template:Incode
+  5.20%    1.182      1 Template:VeryImportantMessage
+  4.74%    1.077      5 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20251229122213 and revision id 1723054. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:64470-0!canonical and timestamp 20260121162556 and revision id 1741948. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
