--- a/wiki/fr/Workbench_creation.html
+++ b/wiki/fr/Workbench_creation.html
@@ -4,9 +4,10 @@
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (85% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (85% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1072; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; (85% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#24037;&#20316;&#21488;&#30340;&#21019;&#24314; (85% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -392,7 +393,7 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
 <h2><span class="mw-headline" id="En_relation">En relation</span></h2>
 <ul><li><a href="../fr/Translating_an_external_workbench.html" title="Translating an external workbench/fr">Traduction et ateliers externes</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Discussion sur le forum&nbsp;: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -422,35 +423,35 @@ Un autre paragraphe a &eacute;t&eacute; cr&eacute;&eacute; pour d&eacute;crire l
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251221101944
+Cached time: 20260121162647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.160 seconds
 Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 10922/2097152 bytes
 Template argument size: 13337/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32659/5000000 bytes
+Unstrip post&#8208;expand size: 32836/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.778      1 -total
- 23.36%    7.423      1 Template:Powerdocnavi/fr
- 17.03%    5.410     12 Template:Code
- 11.85%    3.766      1 Template:Navigation_menu_2
-  8.14%    2.587      2 Template:Docnav/fr
-  8.10%    2.574     10 Template:Incode
-  7.31%    2.323      1 Template:VeryImportantMessage
-  7.07%    2.247      5 Template:FileName
-  6.41%    2.037      1 Template:MenuCommand
-  5.43%    1.725      1 Template:VersionPlus/fr
+100.00%   41.705      1 -total
+ 23.48%    9.791     12 Template:Code
+ 17.05%    7.109      1 Template:Powerdocnavi/fr
+  9.95%    4.148     10 Template:Incode
+  8.52%    3.554      2 Template:Docnav/fr
+  7.79%    3.247      1 Template:Navigation_menu_2
+  7.46%    3.111      1 Template:TOCright
+  6.25%    2.605      1 Template:VeryImportantMessage
+  5.33%    2.225      5 Template:FileName
+  5.21%    2.172      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20251221101943 and revision id 1719189. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:69748-0!canonical and timestamp 20260121162646 and revision id 1741950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
