--- a/wiki/it/Workbench_creation.html
+++ b/wiki/it/Workbench_creation.html
@@ -1,12 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Workbench creation/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Workbench+creation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Erstellung von Arbeitsbereichen (85% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Erstellung von Arbeitsbereichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Workbench_creation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Workbench creation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Cr&eacute;ation d'atelier (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Cr&eacute;ation d'atelier (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (85% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../ru/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#1056;&#1072;&#1079;&#1088;&#1072;&#1073;&#1086;&#1090;&#1082;&#1072; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072; (85% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#24037;&#20316;&#21488;&#30340;&#21019;&#24314; (85% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -413,7 +414,7 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
 <h2><span class="mw-headline" id="Riferimenti">Riferimenti</span></h2>
 <ul><li><a href="../it/Translating_an_external_workbench.html" title="Translating an external workbench/it">Traduzione di un ambiente di lavoro esterno</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">Forum discussion: Namespaced Workbenches</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -443,35 +444,35 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251220220316
+Cached time: 20260121162717
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.090 seconds
+Real time usage: 0.114 seconds
 Preprocessor visited node count: 484/1000000
 Post&#8208;expand include size: 10415/2097152 bytes
 Template argument size: 13032/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32646/5000000 bytes
+Unstrip post&#8208;expand size: 32833/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.793      1 -total
- 18.49%    5.325      1 Template:Powerdocnavi/it
- 15.04%    4.331     12 Template:Code
- 10.20%    2.937      2 Template:Docnav/it
-  9.19%    2.645     10 Template:Incode
-  7.83%    2.253      1 Template:Navigation_menu_2
-  7.75%    2.231      1 Template:TOCright
-  7.49%    2.156      5 Template:FileName
-  6.82%    1.964      1 Template:VersionPlus/it
-  6.66%    1.917      1 Template:VeryImportantMessage
+100.00%   23.858      1 -total
+ 24.48%    5.841      1 Template:Powerdocnavi/it
+ 17.94%    4.280     12 Template:Code
+  8.97%    2.141      1 Template:Navigation_menu_2
+  8.68%    2.070      2 Template:Docnav/it
+  8.14%    1.941     10 Template:Incode
+  6.58%    1.570      1 Template:VeryImportantMessage
+  5.53%    1.320      1 Template:VersionMinus/it
+  5.28%    1.260      1 Template:TOCright
+  4.96%    1.184      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59412-0!canonical and timestamp 20251220220316 and revision id 1718689. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59412-0!canonical and timestamp 20260121162717 and revision id 1741952. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
