--- a/wiki/ru/Workbench_creation.html
+++ b/wiki/ru/Workbench_creation.html
@@ -1,12 +1,13 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Workbench creation/ru</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="ru" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Workbench+creation&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Erstellung von Arbeitsbereichen (85% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Erstellung von Arbeitsbereichen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Workbench_creation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Workbench creation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/es (2% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Cr&eacute;ation d'atelier (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Cr&eacute;ation d'atelier (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Creare un Ambiente di lavoro (85% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="Tworzenie &#347;rodowiska pracy (85% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--complete" title="Tworzenie &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--med" title="Cria&ccedil;&atilde;o de bancadas de trabalho (23% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/ro (2% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
+<li><a href="../cs/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Vytvo&#345;en&iacute; pracovn&iacute; plochy (2% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</span></li>
 <li><a href="../zh-cn/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--high" title="&#24037;&#20316;&#21488;&#30340;&#21019;&#24314; (85% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../zh-hant/Workbench_creation.html" class="mw-pt-progress mw-pt-progress--low" title="Workbench creation/zh-hant (0% translated)" lang="zh-Hant" dir="ltr">&#20013;&#25991;&#65288;&#32321;&#39636;&#65289;</a></li>
@@ -413,7 +414,7 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
 <h2><span id=".D0.A1.D0.BE.D0.BF.D1.83.D1.82.D1.81.D1.82.D0.B2.D1.83.D1.8E.D1.89.D0.B0.D1.8F_.D0.B8.D0.BD.D1.84.D0.BE.D1.80.D0.BC.D0.B0.D1.86.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1057;&#1086;&#1087;&#1091;&#1090;&#1089;&#1090;&#1074;&#1091;&#1102;&#1097;&#1072;&#1103;_&#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103;">&#1057;&#1086;&#1087;&#1091;&#1090;&#1089;&#1090;&#1074;&#1091;&#1102;&#1097;&#1072;&#1103; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103;</span></h2>
 <ul><li><a href="../ru/Translating_an_external_workbench.html" title="Translating an external workbench/ru">&#1055;&#1077;&#1088;&#1077;&#1074;&#1086;&#1076; &#1074;&#1085;&#1077;&#1096;&#1085;&#1077;&#1075;&#1086; &#1074;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1072;</a></li>
 <li><a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?t=47460">&#1054;&#1073;&#1089;&#1091;&#1078;&#1076;&#1077;&#1085;&#1080;&#1077; &#1085;&#1072; &#1092;&#1086;&#1088;&#1091;&#1084;&#1077;: Namespaced Workbenches (&#1048;&#1084;&#1077;&#1085;&#1086;&#1074;&#1072;&#1085;&#1085;&#1099;&#1077; &#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080;)</a></li>
-<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/freecad.workbench_starterkit">freecad.workbench_starterkit</a></li></ul>
+<li><a rel="nofollow" class="external text" href="https://github.com/FreeCAD/Addon-Template">Addon Template</a></li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -443,35 +444,35 @@ Another paragraph is created to describe the new standard.  See [<a rel="nofollo
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251220220303
+Cached time: 20260121162846
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.169 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.130 seconds
 Preprocessor visited node count: 484/1000000
 Post&#8208;expand include size: 10697/2097152 bytes
 Template argument size: 13213/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 12/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 32637/5000000 bytes
+Unstrip post&#8208;expand size: 32824/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.306      1 -total
- 16.16%    5.866     12 Template:Code
- 15.09%    5.478      1 Template:Powerdocnavi/ru
-  9.75%    3.540      5 Template:FileName
-  9.39%    3.408      2 Template:Docnav/ru
-  8.96%    3.254      1 Template:VersionPlus/ru
-  8.43%    3.062      1 Template:VersionMinus/ru
-  7.92%    2.877     10 Template:Incode
-  6.77%    2.458      1 Template:TOCright
-  6.30%    2.287      1 Template:VeryImportantMessage
+100.00%   28.450      1 -total
+ 18.03%    5.130      1 Template:Powerdocnavi/ru
+ 15.54%    4.422     12 Template:Code
+ 11.19%    3.185     10 Template:Incode
+  9.48%    2.696      2 Template:Docnav/ru
+  7.83%    2.227      1 Template:TOCright
+  7.66%    2.180      5 Template:FileName
+  7.66%    2.178      1 Template:Navigation_menu_2
+  6.52%    1.854      1 Template:VersionPlus/ru
+  5.65%    1.606      1 Template:VeryImportantMessage
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:101677-0!canonical and timestamp 20251220220303 and revision id 1718679. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:101677-0!canonical and timestamp 20260121162846 and revision id 1741956. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
